--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="last_name">Last Name</string>
     <string name="alias">Alias</string>
     <string name="mobile_no">Mobile No.</string>
+    <string name="company_name">Company Name</string>
+    <string name="address">Address</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
