--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
     <string name="address">Address</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+
+    <string-array name="unit_array">
+        <item>kg</item>
+        <item>ml</item>
+        <item>unit</item>
+    </string-array>
 </resources>
