[Fix] options button in item_buyer_seller.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="view">View</string>
+    <string name="options">Options</string>
     <string-array name="unit_array">
         <item>kg</item>
         <item>ml</item>
