--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,11 @@
     <string name="number">Number</string>
     <string name="full_name">Full Name</string>
     <string name="show_less_information">Show Less Information</string>
+    <string name="_06_10_2024_11_56_00">06/10/2024 11:56:00</string>
+    <string name="bottle_caps">Bottle Caps</string>
+    <string name="unit_price">Unit Price</string>
+    <string name="quantity">Quantity</string>
+    <string name="total_price">Total Price</string>
     <string-array name="unit_array">
         <item>kg</item>
         <item>ml</item>
